Add Rolling factor betas 36 mois

--- a/factor_attribution.ipynb
+++ b/factor_attribution.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "b2f74526",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "9e87fa54",
    "metadata": {},
    "outputs": [
@@ -459,7 +459,7 @@
        "[306 rows x 51 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "3ed47a4b",
    "metadata": {},
    "outputs": [
@@ -591,7 +591,7 @@
        "[12106 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "a74234f3",
    "metadata": {},
    "outputs": [
@@ -1258,7 +1258,7 @@
        "49  Core dividend exposure across US equities (bro...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,186 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "91c03282",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Charger rendements du fonds (alignés mensuellement)\n",
-    "fund = pd.read_csv('VLUE.csv')\n",
-    "fund['month_enddate'] = pd.to_datetime(\n",
-    "    fund['month_enddate'],\n",
-    "    format='%d-%b-%y'\n",
-    ") + pd.offsets.MonthEnd(0)\n",
-    "\n",
-    "fund = fund.set_index('month_enddate')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "8f91e5a7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Alignement\n",
-    "merged = fund.join(df_factors, how='inner')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "05b32426",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Rendement excédentaire du fonds\n",
-    "merged['fund_excess'] = merged['monthly_total_return'] - merged['RF']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "3c9ecb72",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                            OLS Regression Results                            \n",
-      "==============================================================================\n",
-      "Dep. Variable:            fund_excess   R-squared:                       0.934\n",
-      "Model:                            OLS   Adj. R-squared:                  0.931\n",
-      "Method:                 Least Squares   F-statistic:                     355.7\n",
-      "Date:                Sat, 29 Nov 2025   Prob (F-statistic):           6.59e-83\n",
-      "Time:                        21:16:21   Log-Likelihood:                -242.85\n",
-      "No. Observations:                 149   AIC:                             499.7\n",
-      "Df Residuals:                     142   BIC:                             520.7\n",
-      "Df Model:                           6                                         \n",
-      "Covariance Type:                  HAC                                         \n",
-      "==============================================================================\n",
-      "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
-      "------------------------------------------------------------------------------\n",
-      "const         -0.1686      0.088     -1.922      0.055      -0.341       0.003\n",
-      "Mkt-RF         0.9770      0.036     27.047      0.000       0.906       1.048\n",
-      "SMB            0.0910      0.042      2.144      0.032       0.008       0.174\n",
-      "HML            0.3464      0.037      9.456      0.000       0.275       0.418\n",
-      "RMW            0.0387      0.070      0.556      0.578      -0.098       0.175\n",
-      "CMA            0.1042      0.060      1.741      0.082      -0.013       0.222\n",
-      "UMD           -0.0769      0.037     -2.066      0.039      -0.150      -0.004\n",
-      "==============================================================================\n",
-      "Omnibus:                        0.610   Durbin-Watson:                   2.127\n",
-      "Prob(Omnibus):                  0.737   Jarque-Bera (JB):                0.369\n",
-      "Skew:                          -0.111   Prob(JB):                        0.831\n",
-      "Kurtosis:                       3.101   Cond. No.                         5.37\n",
-      "==============================================================================\n",
-      "\n",
-      "Notes:\n",
-      "[1] Standard Errors are heteroscedasticity and autocorrelation robust (HAC) using 6 lags and without small sample correction\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Statsmodels OLS\n",
-    "X = merged[['Mkt-RF', 'SMB', 'HML', 'RMW', 'CMA','UMD']]\n",
-    "X = sm.add_constant(X)\n",
-    "y = merged['fund_excess']\n",
-    "\n",
-    "# cov_type='HAC' compute heteroskedasticity-and-autocorrelation-consistent covariances (Newey–West style). \n",
-    "# cov_kwds={'maxlags':6} supplies options to that estimator.\n",
-    "# maxlags is the lag truncation used to account for serial correlation up to lag 6 (and typically uses a Bartlett kernel by default).\n",
-    "model = sm.OLS(y, X).fit(cov_type='HAC', cov_kwds={'maxlags':6})\n",
-    "print(model.summary())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "be1d7dd7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>coef</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>const</th>\n",
-       "      <td>-0.168588</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mkt-RF</th>\n",
-       "      <td>0.976992</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SMB</th>\n",
-       "      <td>0.091011</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>HML</th>\n",
-       "      <td>0.346377</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RMW</th>\n",
-       "      <td>0.038724</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CMA</th>\n",
-       "      <td>0.104229</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UMD</th>\n",
-       "      <td>-0.076899</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            coef\n",
-       "const  -0.168588\n",
-       "Mkt-RF  0.976992\n",
-       "SMB     0.091011\n",
-       "HML     0.346377\n",
-       "RMW     0.038724\n",
-       "CMA     0.104229\n",
-       "UMD    -0.076899"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# Récupérer coefficients du modèle\n",
-    "coef_table = model.params.to_frame(name='coef')\n",
-    "display(coef_table)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "6602b2c7",
    "metadata": {},
    "outputs": [
@@ -1466,7 +1287,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1487,11 +1308,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "75374360",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Boucle sur les tickers pour réaliser les régressions Factor Attribution\n",
     "rows = []\n",
     "for t in tickers:\n",
     "    df_sub = (\n",
@@ -1552,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "c3366009",
    "metadata": {},
    "outputs": [
@@ -1619,13 +1441,128 @@
        "2000-09-30           -5.27"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "series_by_ticker[\"IVV\"].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f14d7441",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Paramètres\n",
+    "WINDOW = 36 # fenêtre de calcul des rolling beta (en mois)\n",
+    "FACTORS = [\"Mkt-RF\", \"SMB\", \"HML\", \"RMW\", \"CMA\", \"UMD\"]\n",
+    "HAC_MAXLAGS = 6\n",
+    "\n",
+    "rows = []\n",
+    "series_by_ticker = {}  # pour conserver les séries\n",
+    "\n",
+    "for t in tickers:\n",
+    "    ticker = str(t).strip()\n",
+    "\n",
+    "    df_sub = (\n",
+    "        df_returns.loc[df_returns[\"ticker\"].astype(str).str.strip() == ticker, [\"Date\", \"monthly_return\"]]\n",
+    "        .dropna()\n",
+    "        .copy()\n",
+    "    )\n",
+    "    if df_sub.empty:\n",
+    "        continue\n",
+    "\n",
+    "    df_sub[\"Date\"] = pd.to_datetime(df_sub[\"Date\"])\n",
+    "    df_fund = df_sub.sort_values(\"Date\").set_index(\"Date\")\n",
+    "    df_fund.name = ticker\n",
+    "    series_by_ticker[ticker] = df_fund\n",
+    "\n",
+    "    # Join facteurs (df_factors est indexé par Date en datetime)\n",
+    "    df_fund = df_fund.join(df_factors, how=\"inner\").sort_index()\n",
+    "    if df_fund.empty:\n",
+    "        continue\n",
+    "\n",
+    "    # Rendement excédentaire\n",
+    "    df_fund[\"fund_excess\"] = df_fund[\"monthly_return\"] - df_fund[\"RF\"]\n",
+    "\n",
+    "    # On ne garde que les colonnes utiles (et on drop les NaN au fil des fenêtres)\n",
+    "    needed = [\"fund_excess\"] + FACTORS\n",
+    "    df_fund = df_fund.dropna(subset=needed)\n",
+    "\n",
+    "    if len(df_fund) < WINDOW:\n",
+    "        continue\n",
+    "\n",
+    "    # Rolling regressions : une régression par mois, sur les 36 derniers points\n",
+    "    for end_loc in range(WINDOW - 1, len(df_fund)):\n",
+    "        df_win = df_fund.iloc[end_loc - WINDOW + 1 : end_loc + 1]\n",
+    "\n",
+    "        # On vérifie si la fenêtre est complète\n",
+    "        if len(df_win) < WINDOW:\n",
+    "            continue\n",
+    "\n",
+    "        X = sm.add_constant(df_win[FACTORS], has_constant=\"add\")\n",
+    "        y = df_win[\"fund_excess\"]\n",
+    "\n",
+    "        # garde-fou: pas de régression si trop peu d'observations vs nb de variables\n",
+    "        if len(df_win) < (X.shape[1] + 5):\n",
+    "            continue\n",
+    "\n",
+    "        try:\n",
+    "            model = sm.OLS(y, X).fit(cov_type=\"HAC\", cov_kwds={\"maxlags\": HAC_MAXLAGS})\n",
+    "        except Exception:\n",
+    "            continue\n",
+    "\n",
+    "        row = {\n",
+    "            \"ticker\": ticker,\n",
+    "            \"window_start\": df_win.index.min(),\n",
+    "            \"window_end\": df_win.index.max(),\n",
+    "            \"n_obs\": int(model.nobs),\n",
+    "            \"rsquared\": float(model.rsquared),\n",
+    "            \"rsquared_adj\": float(model.rsquared_adj),\n",
+    "        }\n",
+    "\n",
+    "        # Coefficients\n",
+    "        params = model.params.to_dict()\n",
+    "        row.update(params)\n",
+    "\n",
+    "        # Détails (optionnel mais utile)\n",
+    "        bse = model.bse.to_dict()\n",
+    "        pvals = model.pvalues.to_dict()\n",
+    "        for k, v in bse.items():\n",
+    "            row[f\"{k}_se\"] = float(v)\n",
+    "        for k, v in pvals.items():\n",
+    "            row[f\"{k}_pval\"] = float(v)\n",
+    "\n",
+    "        rows.append(row)\n",
+    "\n",
+    "df_rolling = pd.DataFrame(rows)\n",
+    "\n",
+    "# Ordonner les colonnes\n",
+    "base_cols = [\n",
+    "    \"ticker\", \"window_start\", \"window_end\", \"n_obs\", \"rsquared\", \"rsquared_adj\",\n",
+    "    \"const\", \"Mkt-RF\", \"SMB\", \"HML\", \"RMW\", \"CMA\", \"UMD\"\n",
+    "]\n",
+    "detail_cols = []\n",
+    "for k in [\"const\"] + FACTORS:\n",
+    "    detail_cols += [f\"{k}_se\", f\"{k}_pval\"]\n",
+    "\n",
+    "ordered = [c for c in base_cols if c in df_rolling.columns] + \\\n",
+    "          [c for c in detail_cols if c in df_rolling.columns] + \\\n",
+    "          [c for c in df_rolling.columns if c not in set(base_cols + detail_cols)]\n",
+    "\n",
+    "df_rolling = df_rolling.reindex(columns=ordered)\n",
+    "\n",
+    "# Format dates (optionnel)\n",
+    "if \"window_start\" in df_rolling.columns:\n",
+    "    df_rolling[\"window_start\"] = pd.to_datetime(df_rolling[\"window_start\"]).dt.date\n",
+    "if \"window_end\" in df_rolling.columns:\n",
+    "    df_rolling[\"window_end\"] = pd.to_datetime(df_rolling[\"window_end\"]).dt.date\n",
+    "\n",
+    "df_rolling.to_csv(\"iShares_FF5_rolling36_factor_betas_by_month.csv\", index=False)"
    ]
   }
  ],
