--- a/factor_attribution.ipynb
+++ b/factor_attribution.ipynb
@@ -1452,7 +1452,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "id": "fb55d7eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Paramètres\n",
+    "WINDOW = 60 # fenêtre de calcul des rolling beta (en mois)\n",
+    "FACTORS = [\"Mkt-RF\", \"SMB\", \"HML\", \"RMW\", \"CMA\", \"UMD\"]\n",
+    "HAC_MAXLAGS = 6\n",
+    "\n",
+    "rows = []\n",
+    "series_by_ticker = {}  # pour conserver les séries\n",
+    "\n",
+    "for t in tickers:\n",
+    "    ticker = str(t).strip()\n",
+    "\n",
+    "    df_sub = (\n",
+    "        df_returns.loc[df_returns[\"ticker\"].astype(str).str.strip() == ticker, [\"Date\", \"monthly_return\"]]\n",
+    "        .dropna()\n",
+    "        .copy()\n",
+    "    )\n",
+    "    if df_sub.empty:\n",
+    "        continue\n",
+    "\n",
+    "    df_sub[\"Date\"] = pd.to_datetime(df_sub[\"Date\"])\n",
+    "    df_fund = df_sub.sort_values(\"Date\").set_index(\"Date\")\n",
+    "    df_fund.name = ticker\n",
+    "    series_by_ticker[ticker] = df_fund\n",
+    "\n",
+    "    # Join facteurs (df_factors est indexé par Date en datetime)\n",
+    "    df_fund = df_fund.join(df_factors, how=\"inner\").sort_index()\n",
+    "    if df_fund.empty:\n",
+    "        continue\n",
+    "\n",
+    "    # Rendement excédentaire\n",
+    "    df_fund[\"fund_excess\"] = df_fund[\"monthly_return\"] - df_fund[\"RF\"]\n",
+    "\n",
+    "    # On ne garde que les colonnes utiles (et on drop les NaN au fil des fenêtres)\n",
+    "    needed = [\"fund_excess\"] + FACTORS\n",
+    "    df_fund = df_fund.dropna(subset=needed)\n",
+    "\n",
+    "    if len(df_fund) < WINDOW:\n",
+    "        continue\n",
+    "\n",
+    "    # Rolling regressions : une régression par mois, sur les 60 derniers points\n",
+    "    for end_loc in range(WINDOW - 1, len(df_fund)):\n",
+    "        df_win = df_fund.iloc[end_loc - WINDOW + 1 : end_loc + 1]\n",
+    "\n",
+    "        # On vérifie si la fenêtre est complète\n",
+    "        if len(df_win) < WINDOW:\n",
+    "            continue\n",
+    "\n",
+    "        X = sm.add_constant(df_win[FACTORS], has_constant=\"add\")\n",
+    "        y = df_win[\"fund_excess\"]\n",
+    "\n",
+    "        # garde-fou: pas de régression si trop peu d'observations vs nb de variables\n",
+    "        if len(df_win) < (X.shape[1] + 5):\n",
+    "            continue\n",
+    "\n",
+    "        try:\n",
+    "            model = sm.OLS(y, X).fit(cov_type=\"HAC\", cov_kwds={\"maxlags\": HAC_MAXLAGS})\n",
+    "        except Exception:\n",
+    "            continue\n",
+    "\n",
+    "        row = {\n",
+    "            \"ticker\": ticker,\n",
+    "            \"window_start\": df_win.index.min(),\n",
+    "            \"window_end\": df_win.index.max(),\n",
+    "            \"n_obs\": int(model.nobs),\n",
+    "            \"rsquared\": float(model.rsquared),\n",
+    "            \"rsquared_adj\": float(model.rsquared_adj),\n",
+    "        }\n",
+    "\n",
+    "        # Coefficients\n",
+    "        params = model.params.to_dict()\n",
+    "        row.update(params)\n",
+    "\n",
+    "        # Détails (optionnel mais utile)\n",
+    "        bse = model.bse.to_dict()\n",
+    "        pvals = model.pvalues.to_dict()\n",
+    "        for k, v in bse.items():\n",
+    "            row[f\"{k}_se\"] = float(v)\n",
+    "        for k, v in pvals.items():\n",
+    "            row[f\"{k}_pval\"] = float(v)\n",
+    "\n",
+    "        rows.append(row)\n",
+    "        \n",
+    "        # Calcul du résiduel\n",
+    "        # model.fittedvalues = les valeurs ajustées ŷ in-sample sur cette même fenêtre\n",
+    "        # (y - model.fittedvalues) = la série des résiduels sur la fenêtre\n",
+    "        # .iloc[-1] = le résiduel du dernier mois de la fenêtre (le mois window_end)\n",
+    "        # On ne cherche à conserver qu'un résiduel par fenêtre (le dernier), pas la série complète.\n",
+    "        # On aurait pu calculer : df_rolling.loc[len(df_rolling) - 1, \"residual\"] = (y - model.fittedvalues).iloc[-1]\n",
+    "        # Mais Statsmodels expose déjà model.resid qui est exactement y - fittedvalues.\n",
+    "        row[\"residual\"] = float(model.resid.iloc[-1])  # équivalent à (y - model.fittedvalues).iloc[-1]\n",
+    "\n",
+    "df_rolling = pd.DataFrame(rows)\n",
+    "\n",
+    "# Ordonner les colonnes\n",
+    "base_cols = [\n",
+    "    \"ticker\", \"window_start\", \"window_end\", \"n_obs\", \"rsquared\", \"rsquared_adj\",\n",
+    "    \"const\", \"Mkt-RF\", \"SMB\", \"HML\", \"RMW\", \"CMA\", \"UMD\"\n",
+    "]\n",
+    "detail_cols = []\n",
+    "for k in [\"const\"] + FACTORS:\n",
+    "    detail_cols += [f\"{k}_se\", f\"{k}_pval\"]\n",
+    "\n",
+    "ordered = [c for c in base_cols if c in df_rolling.columns] + \\\n",
+    "          [c for c in detail_cols if c in df_rolling.columns] + \\\n",
+    "          [c for c in df_rolling.columns if c not in set(base_cols + detail_cols)]\n",
+    "\n",
+    "df_rolling = df_rolling.reindex(columns=ordered)\n",
+    "\n",
+    "# Format dates (optionnel)\n",
+    "if \"window_start\" in df_rolling.columns:\n",
+    "    df_rolling[\"window_start\"] = pd.to_datetime(df_rolling[\"window_start\"]).dt.date\n",
+    "if \"window_end\" in df_rolling.columns:\n",
+    "    df_rolling[\"window_end\"] = pd.to_datetime(df_rolling[\"window_end\"]).dt.date\n",
+    "\n",
+    "df_rolling.to_csv(\"iShares_FF5_rolling60_factor_betas_by_month.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f14d7441",
    "metadata": {},
    "outputs": [],
@@ -1539,6 +1663,15 @@
     "\n",
     "        rows.append(row)\n",
     "\n",
+    "        # Calcul du résiduel\n",
+    "        # model.fittedvalues = les valeurs ajustées ŷ in-sample sur cette même fenêtre\n",
+    "        # (y - model.fittedvalues) = la série des résiduels sur la fenêtre\n",
+    "        # .iloc[-1] = le résiduel du dernier mois de la fenêtre (le mois window_end)\n",
+    "        # On ne cherche à conserver qu'un résiduel par fenêtre (le dernier), pas la série complète.\n",
+    "        # On aurait pu calculer : df_rolling.loc[len(df_rolling) - 1, \"residual\"] = (y - model.fittedvalues).iloc[-1]\n",
+    "        # Mais Statsmodels expose déjà model.resid qui est exactement y - fittedvalues.\n",
+    "        row[\"residual\"] = float(model.resid.iloc[-1])  # équivalent à (y - model.fittedvalues).iloc[-1]\n",
+    "\n",
     "df_rolling = pd.DataFrame(rows)\n",
     "\n",
     "# Ordonner les colonnes\n",
@@ -1564,6 +1697,31 @@
     "\n",
     "df_rolling.to_csv(\"iShares_FF5_rolling36_factor_betas_by_month.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b76c36a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# On souhaite maintenant expliquer le résiduel du modèle de facteurs (FF5 + Momentum) en ajoutant des variables macroéconomiques.\n",
+    "# On veut comprendre dans quel contexte le fonds fait nettement mieux ou nettement pire que ce qu’on attendrait, compte tenu de son exposition aux facteurs et du régime macro.\n",
+    "# Le résiduel du modèle de facteurs est netté des expositions structurelles (Value, Size, Momentum…)\n",
+    "# Il mesure la sur-/sous-performance conditionnelle au style et se prête bien à la recherche de règles\n",
+    "\n",
+    "# On commence par sélectionner les variables pertinentes de df_rolling avant d'ajouter des variables macroéconomiques.\n",
+    "df_train = df_rolling[['ticker', 'window_end', 'residual', 'Mkt-RF', 'SMB', 'HML', 'RMW', 'CMA', 'UMD']]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "814929c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
