Ajout d'une variable target alternative

--- a/factor_attribution.ipynb
+++ b/factor_attribution.ipynb
@@ -1704,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "id": "b76c36a7",
    "metadata": {},
    "outputs": [
@@ -1745,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "id": "ae1098b4",
    "metadata": {},
    "outputs": [
@@ -1771,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "id": "814929c3",
    "metadata": {},
    "outputs": [],
@@ -1795,7 +1795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "id": "d5ed4a60",
    "metadata": {},
    "outputs": [
@@ -1850,8 +1850,293 @@
    "execution_count": null,
    "id": "4d8f7068",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ticker</th>\n",
+       "      <th>window_end</th>\n",
+       "      <th>residual</th>\n",
+       "      <th>Mkt-RF</th>\n",
+       "      <th>SMB</th>\n",
+       "      <th>HML</th>\n",
+       "      <th>RMW</th>\n",
+       "      <th>CMA</th>\n",
+       "      <th>UMD</th>\n",
+       "      <th>target</th>\n",
+       "      <th>residual_3m</th>\n",
+       "      <th>target_v2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9833</th>\n",
+       "      <td>DGRO</td>\n",
+       "      <td>2017-08-31</td>\n",
+       "      <td>0.320358</td>\n",
+       "      <td>0.969084</td>\n",
+       "      <td>-0.127385</td>\n",
+       "      <td>0.037286</td>\n",
+       "      <td>0.094913</td>\n",
+       "      <td>0.272130</td>\n",
+       "      <td>0.058930</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>0.071809</td>\n",
+       "      <td>Neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9834</th>\n",
+       "      <td>DGRO</td>\n",
+       "      <td>2017-09-30</td>\n",
+       "      <td>0.208237</td>\n",
+       "      <td>0.973467</td>\n",
+       "      <td>-0.120312</td>\n",
+       "      <td>0.039493</td>\n",
+       "      <td>0.092195</td>\n",
+       "      <td>0.277382</td>\n",
+       "      <td>0.062515</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>-0.533721</td>\n",
+       "      <td>Neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9835</th>\n",
+       "      <td>DGRO</td>\n",
+       "      <td>2017-10-31</td>\n",
+       "      <td>-0.078235</td>\n",
+       "      <td>0.970703</td>\n",
+       "      <td>-0.138696</td>\n",
+       "      <td>0.057358</td>\n",
+       "      <td>0.089897</td>\n",
+       "      <td>0.263235</td>\n",
+       "      <td>0.061913</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>0.450361</td>\n",
+       "      <td>Neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9836</th>\n",
+       "      <td>DGRO</td>\n",
+       "      <td>2017-11-30</td>\n",
+       "      <td>0.623797</td>\n",
+       "      <td>0.978266</td>\n",
+       "      <td>-0.133915</td>\n",
+       "      <td>0.060372</td>\n",
+       "      <td>0.122811</td>\n",
+       "      <td>0.259756</td>\n",
+       "      <td>0.062801</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>0.753799</td>\n",
+       "      <td>Neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9837</th>\n",
+       "      <td>DGRO</td>\n",
+       "      <td>2017-12-31</td>\n",
+       "      <td>-0.679486</td>\n",
+       "      <td>0.975461</td>\n",
+       "      <td>-0.129660</td>\n",
+       "      <td>0.068998</td>\n",
+       "      <td>0.133818</td>\n",
+       "      <td>0.220223</td>\n",
+       "      <td>0.060264</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>-0.133924</td>\n",
+       "      <td>Neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9601</th>\n",
+       "      <td>VLUE</td>\n",
+       "      <td>2025-05-31</td>\n",
+       "      <td>-0.157759</td>\n",
+       "      <td>0.989912</td>\n",
+       "      <td>-0.010511</td>\n",
+       "      <td>0.498028</td>\n",
+       "      <td>0.034941</td>\n",
+       "      <td>0.076110</td>\n",
+       "      <td>-0.142997</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>0.732146</td>\n",
+       "      <td>Neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9602</th>\n",
+       "      <td>VLUE</td>\n",
+       "      <td>2025-06-30</td>\n",
+       "      <td>1.627178</td>\n",
+       "      <td>1.023979</td>\n",
+       "      <td>-0.080027</td>\n",
+       "      <td>0.508061</td>\n",
+       "      <td>-0.060760</td>\n",
+       "      <td>0.142669</td>\n",
+       "      <td>-0.179014</td>\n",
+       "      <td>Overperformance</td>\n",
+       "      <td>1.386067</td>\n",
+       "      <td>Neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9603</th>\n",
+       "      <td>VLUE</td>\n",
+       "      <td>2025-07-31</td>\n",
+       "      <td>-1.489432</td>\n",
+       "      <td>1.034124</td>\n",
+       "      <td>-0.073330</td>\n",
+       "      <td>0.510460</td>\n",
+       "      <td>-0.041835</td>\n",
+       "      <td>0.117027</td>\n",
+       "      <td>-0.175715</td>\n",
+       "      <td>Underperformance</td>\n",
+       "      <td>-0.020013</td>\n",
+       "      <td>Neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9604</th>\n",
+       "      <td>VLUE</td>\n",
+       "      <td>2025-08-31</td>\n",
+       "      <td>1.236402</td>\n",
+       "      <td>1.037251</td>\n",
+       "      <td>-0.061478</td>\n",
+       "      <td>0.518426</td>\n",
+       "      <td>-0.021793</td>\n",
+       "      <td>0.114205</td>\n",
+       "      <td>-0.181894</td>\n",
+       "      <td>Overperformance</td>\n",
+       "      <td>1.374148</td>\n",
+       "      <td>Neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9605</th>\n",
+       "      <td>VLUE</td>\n",
+       "      <td>2025-09-30</td>\n",
+       "      <td>2.773670</td>\n",
+       "      <td>1.052421</td>\n",
+       "      <td>-0.088736</td>\n",
+       "      <td>0.547502</td>\n",
+       "      <td>-0.064950</td>\n",
+       "      <td>0.070754</td>\n",
+       "      <td>-0.155003</td>\n",
+       "      <td>Overperformance</td>\n",
+       "      <td>2.520640</td>\n",
+       "      <td>Overperformance</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10206 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     ticker  window_end  residual    Mkt-RF       SMB       HML       RMW  \\\n",
+       "9833   DGRO  2017-08-31  0.320358  0.969084 -0.127385  0.037286  0.094913   \n",
+       "9834   DGRO  2017-09-30  0.208237  0.973467 -0.120312  0.039493  0.092195   \n",
+       "9835   DGRO  2017-10-31 -0.078235  0.970703 -0.138696  0.057358  0.089897   \n",
+       "9836   DGRO  2017-11-30  0.623797  0.978266 -0.133915  0.060372  0.122811   \n",
+       "9837   DGRO  2017-12-31 -0.679486  0.975461 -0.129660  0.068998  0.133818   \n",
+       "...     ...         ...       ...       ...       ...       ...       ...   \n",
+       "9601   VLUE  2025-05-31 -0.157759  0.989912 -0.010511  0.498028  0.034941   \n",
+       "9602   VLUE  2025-06-30  1.627178  1.023979 -0.080027  0.508061 -0.060760   \n",
+       "9603   VLUE  2025-07-31 -1.489432  1.034124 -0.073330  0.510460 -0.041835   \n",
+       "9604   VLUE  2025-08-31  1.236402  1.037251 -0.061478  0.518426 -0.021793   \n",
+       "9605   VLUE  2025-09-30  2.773670  1.052421 -0.088736  0.547502 -0.064950   \n",
+       "\n",
+       "           CMA       UMD            target  residual_3m        target_v2  \n",
+       "9833  0.272130  0.058930           Neutral     0.071809          Neutral  \n",
+       "9834  0.277382  0.062515           Neutral    -0.533721          Neutral  \n",
+       "9835  0.263235  0.061913           Neutral     0.450361          Neutral  \n",
+       "9836  0.259756  0.062801           Neutral     0.753799          Neutral  \n",
+       "9837  0.220223  0.060264           Neutral    -0.133924          Neutral  \n",
+       "...        ...       ...               ...          ...              ...  \n",
+       "9601  0.076110 -0.142997           Neutral     0.732146          Neutral  \n",
+       "9602  0.142669 -0.179014   Overperformance     1.386067          Neutral  \n",
+       "9603  0.117027 -0.175715  Underperformance    -0.020013          Neutral  \n",
+       "9604  0.114205 -0.181894   Overperformance     1.374148          Neutral  \n",
+       "9605  0.070754 -0.155003   Overperformance     2.520640  Overperformance  \n",
+       "\n",
+       "[10206 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Alternative : On change l'horizon temporel de la cible\n",
+    "# Comme les macros macroéconomiques FRED sont relativement lentes, on reconstruit une cible sur un horizon 3, 6 ou 12 mois :\n",
+    "# Exemple : y_3m = somme des résiduels sur les 3 derniers mois\n",
+    "# Cela réduit le bruit mensuel et met en cohérence la granularité avec les régimes macro.\n",
+    "\n",
+    "df_train = df_train.sort_values(['ticker', 'window_end'])\n",
+    "\n",
+    "horizon = 3  # 3, 6 ou 12\n",
+    "\n",
+    "# Somme roulante des résiduels par ticker\n",
+    "df_train[f'residual_{horizon}m'] = (\n",
+    "    df_train\n",
+    "    .groupby('ticker')['residual']\n",
+    "    .transform(lambda s: s.rolling(window=horizon, min_periods=horizon).sum())\n",
+    ")\n",
+    "\n",
+    "# Seuils (ici au global ; si tu préfères par ticker, calcule sigma dans une transform)\n",
+    "sigma = df_train[f'residual_{horizon}m'].std()\n",
+    "\n",
+    "df_train = df_train.assign(\n",
+    "    target_v2=pd.cut(\n",
+    "        df_train[f'residual_{horizon}m'],\n",
+    "        bins=[-float('inf'), -sigma, sigma, float('inf')],\n",
+    "        labels=['Underperformance', 'Neutral', 'Overperformance'],\n",
+    "        ordered=True\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "# Option : filtrer les lignes sans fenêtre complète\n",
+    "df_train = df_train.dropna(subset=[f'residual_{horizon}m', 'target_v2'])\n",
+    "# df_train.to_csv(\"df_train.csv\", index=False)\n",
+    "df_train\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee376425",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# On cherche des règles explicatives du type : \n",
+    "# “Lorsque {courbe des taux inversée} & {VIX en régime High} & {fond = Growth large caps}, la probabilité d’alpha anormalement négatif sur 3 mois double.”"
+   ]
   }
  ],
  "metadata": {
