Ajout du dictionnaire des variables

--- a/factor_attribution.ipynb
+++ b/factor_attribution.ipynb
@@ -2380,6 +2380,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79c2534f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "target_3m\n",
+       "Neutral             74.288222\n",
+       "Underperformance    13.572543\n",
+       "Overperformance     12.139236\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calcul du % de chaque classe target_3m dans le dataset\n",
+    "percentages = df_train['target_3m'].value_counts(normalize=True) * 100\n",
+    "percentages"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1751fdaa",
    "metadata": {},
@@ -4089,7 +4116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "384773c3",
    "metadata": {},
    "outputs": [
@@ -4230,7 +4257,7 @@
     "    .mean()\n",
     ")\n",
     "\n",
-    "# vix_delta_1m pour capturer les chocs d’aversion au risque brutaux.\n",
+    "# vix_delta_1m pour capturer les chocs d’aversion aux risques brutaux.\n",
     "vix_delta_1m = vix_level - vix_level.shift(1)\n",
     "\n",
     "# Amplitude mensuelle du VIX\n",
